# TablaM

./: .gitignore  ARCHITECTURE.md  CNAME  Cargo.toml  README.md  RESEARCH.md  before_push.ps1  text.tbm
.github/: FUNDING.yml
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: dsl.rs  errors.rs  file.rs  function.rs  io.rs  iterators.rs  joins.rs  lib.rs  map.rs  modules.rs  query.rs  refcount.rs  relation.rs  row.rs  scalar.rs  schema.rs  seq.rs  sum_type.rs  sum_types.rs  tree.rs  tuple.rs  types.rs  utils.rs  vector.rs
core/src/interpreter/: ast.rs  code.rs  core.rs  dsl.rs  env.rs  mod.rs  modules.rs  program.rs  visitor.rs
core/src/stdlib/: basic.rs  io.rs  math.rs  mod.rs
core/tests/src/: basic.rs  cross.rs  diff.rs  distinct.rs  filter.rs  functions.rs  intersect.rs  join_left.rs  limits.rs  main.rs  map.rs  math.rs  select.rs  sum_types.rs  tree.rs  union.rs  utils.rs  vector.rs
data/: products.csv
docs/: Entry.md  build.sh  build_css.sh  config.toml  deploy.sh  package-lock.json  package.json  run_zola.sh  syntax.tbm  tailwind.config.js
docs/content/: _index.md  functions.md  install.md  operators.md  syntax.md  tutorial.md
docs/static/css/: main.css  styles.css
docs/templates/: base.html  index.html  page.html
lang/: Cargo.toml
lang/src/: ast.rs  eval.rs  lexer.rs  lib.rs  main.rs  modules.rs  parser.rs  scanner.rs
lang/src/stdlib/: basic.rs  io.rs  math.rs  mod.rs
lang/tests/src/: basic.rs  eval.rs  lexer.rs  main.rs  parser.rs  utils.rs
src/core/: Cargo.toml
src/core/src/: algebraic.rs  convert.rs  dsl.rs  errors.rs  lib.rs  relation.rs  scalar.rs  schema.rs  types.rs  utils.rs  vector.rs
src/eval/: Cargo.toml
src/eval/src/: ast.rs  code.rs  diagnostic.rs  env.rs  errors.rs  function.rs  lib.rs  program.rs
src/parser/: Cargo.toml
src/parser/src/: ast.rs  checklist.rs  cst.rs  errors.rs  expr.rs  files.rs  lexer.rs  lib.rs  parser.rs  pratt.rs  token.rs
src/tablam/: .history.txt  Cargo.toml
src/tablam/src/: main.rs
tools/: README.md
tools/sublime/: TablaM.sublime-syntax
