[package]
name = "tablam"
version = "0.4.0"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
repository = "https://github.com/Tablam/TablaM"
homepage = "https://github.com/Tablam/TablaM"
description = "A relational language (experimental)"
license = "MPL-2.0"
keywords = ["database", "interpreter", "language", "relational"]
categories = ["interpreter", "language", "relational", "tablam"]
edition = "2018"

[dependencies]
bit-vec =  { version = "0.6.3", features = ["std"] }
chrono = { version = "0.4.19", features = ["default"] }
decorum = { version = "0.3.1", features = ["std"] }
derivative = "2.2.0"
derive_more = "0.99.14"
dyn-clone = "1.0.4"
genawaiter = "0.99.1"
itertools = "0.10.0"
indexmap = { version = "1.6.2", features = [] }
lazy_static = "1.4.0"
ndarray="0.15.2"
rust_decimal = { version = "1.14.1", features = [] }
slotmap = "1.0.3"
