[package]
name = "tablam-lang"
version = "0.3.0"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
repository = "https://bitbucket.org/tablam/tablam/"
homepage = "https://bitbucket.org/tablam/tablam/"
license = "MPL-2.0"
keywords = ["database", "interpreter", "language", "relational"]
categories = ["interpreter", "language", "relational", "tablam"]
edition = "2018"

[dependencies]
tablam = { path = "../core" }
logos = "0.11.4"
rustyline = "6.2.0"
seahorse = "1.0.0"

[[bin]]
name = "tablam"
path = "src/main.rs"
