[package]
name = "tablam-lang"
version = "0.3.4"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
repository = "https://bitbucket.org/tablam/tablam/"
homepage = "https://bitbucket.org/tablam/tablam/"
license = "MPL-2.0"
keywords = ["database", "interpreter", "language", "relational"]
categories = ["interpreter", "language", "relational", "tablam"]
edition = "2018"

[dependencies]
tablam = { path = "../core" }
console = "0.14.1"
enum-map = "1.1.1"
logos = "0.11.4"
rustyline = "7.1.0"
seahorse = "1.1.1"
strum = "0.21"
strum_macros = "0.21"

[[bin]]
name = "tablam"
path = "src/main.rs"
