[package]
name = "tablam-core"
version = "0.5.0"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
repository = "https://github.com/Tablam/TablaM"
homepage = "https://github.com/Tablam/TablaM"
description = "A relational language (experimental)"
license = "MPL-2.0"
keywords = ["database", "interpreter", "language", "relational"]
categories = ["interpreter", "language", "relational", "tablam"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["default"] }
decorum = { version = "0.3.1", features = ["std"] }
derive_more = { version = "0.99.17", features = ["from", "display", "from_str"] }
downcast-rs = "1.2.0"
indexmap = { version = "1.9.1", features = [] }
rust_decimal = { version = "1.25.0", features = [] }
slotmap = "1.0.6"
text-size = "1.1.0"
tree-flat = { git = "https://github.com/mamcx/tree-flat" }
