[package]
name = "tablam-parser"
version = "0.1.0"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
repository = "https://github.com/Tablam/TablaM"
homepage = "https://github.com/Tablam/TablaM"
description = "A relational language (experimental)"
license = "MPL-2.0"
keywords = ["database", "interpreter", "language", "relational"]
categories = ["interpreter", "language", "relational", "tablam"]
edition = "2021"

[dependencies]
corelib = { path = "../core" , package="tablam-core" }

logos = "0.12.1"

[dev-dependencies]
expect-test = "1.3.0"
