[package]
name = "tablam"
version = "0.5.1"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
repository = "https://github.com/Tablam/TablaM"
homepage = "https://github.com/Tablam/TablaM"
description = "A relational language (experimental)"
license = "MPL-2.0"
keywords = ["database", "interpreter", "language", "relational"]
categories = ["interpreter", "language", "relational", "tablam"]
edition = "2021"

[dependencies]
corelib = { path = "../core" , package="tablam-core" }
eval = { path = "../eval" , package="tablam-eval" }

rustyline =  { version = "9.1.2", features = [] }
seahorse = "2.1"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
reedline = "0.8.0"